Rest Customer API
Chuyển Controller sang RestController.
Chưa hoàn thiện, chờ Front-end sẽ hoàn thiện hơn.

--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,17 @@
                 </exclusion>
             </exclusions>
         </dependency>
+		
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>${org.springframework-version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>${org.springframework-version} </version>
+		</dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
@@ -64,6 +75,25 @@
             <artifactId>jackson-databind</artifactId>
             <version>2.4.3</version>
         </dependency>
+        <dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.4.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.4.3</version>
+		</dependency>
+		<!-- Jaxb -->
+		<dependency>
+			<groupId>javax.xml</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.1</version>
+		</dependency>
+		
+		
+		
 
         <!-- Apache Commons FileUpload -->
         <dependency>
