--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -46,5 +46,25 @@
         <error-code>404</error-code>
         <location>/WEB-INF/views/404.jsp</location>
     </error-page>
+    <filter>
+	<filter-name>cross-origin</filter-name>
+	<filter-class>org.eclipse.jetty.servlets.CrossOriginFilter</filter-class>
+	<init-param>
+		<param-name>allowedOrigins</param-name>
+		<param-value>*</param-value>
+	</init-param>
+	<init-param>
+		<param-name>allowedMethods</param-name>
+		<param-value>DELETE,POST,GET,PUT</param-value>
+	</init-param>
+	<init-param>
+		<param-name>allowedHeaders</param-name>
+		<param-value>*</param-value>
+	</init-param>
+</filter>
+	<filter-mapping>
+		<filter-name>cross-origin</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
     
 </web-app>
